src/app/app.component.css
.body {
  background: #000;
}

.app {
  background: #f0f1f1;
}

.title-block {
  background: #f4faff;
}

.title-block .title {
  font-size: 24px;
  display: block;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-right: 0;
  color: #4a90e2;
}

.title-block .title:hover {
  text-decoration: none;
}

.title-block .balance-text {
  display: block;
  font-size: 12px;
}

.title-block .balance {
  display: block;
  font-size: 18px;
  margin-top: -8px;
}

.left-nav {
  font-size: 18px;
  font-weight: 500;
}

.left-nav .active {
  color: #4a90e2;
  font-weight: 500;
  text-decoration: underline;
}

.left-nav a {
  color: #FFF;
}

.left-nav a:hover {
  color: #4a90e2;
}

.left-nav>li.uk-parent li {
  font-weight: 300;
}

.wallet-bar a {
  color: #fff;
}

.footer {
  color: #d4d5d5;
  font-size: 12px;
}

.footer a {
  color: #fff;
}

.footer-link {
  margin-left: 5px;
  margin-right: 5px;
  opacity: 0.5;
}
.footer-link:hover {
  opacity: 1;
}

.confirm-title {
  font-weight: bolder;
  display: block;
  font-size: 24px;
}

.confirm-currency {
  font-weight: bolder;
  display: block;
  font-size: 20px;
}

.confirm-subtitle {
  display: block;
  font-size: 10px;
}

.content-container {
  border-top: 1px solid rgb(220, 233, 249);
  z-index: 1;
}

@media (max-width: 12450px) {
  .content-container {
    padding-left: 15px;
    padding-right: 10px;
  }
}
@media (max-width: 639px) {
  .content-container {
    padding-left: 30px;
    padding-right: inherit;
    transition: transform 0.5s ease;
  }

  .content-container.nav-expanded {
    transform: translateX(350px);
  }
}

@media (max-width: 639px) {
  .nav-container {
    position: absolute;
    width: 350px;
    height: 100%;
  }
}

